--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-dom": "^16.13.1",
         "react-popup": "^0.10.0",
         "react-router-dom": "^5.2.0",
+        "react-router-hash-link": "^2.1.0",
         "react-scripts": "3.4.1",
         "reactstrap": "^8.5.1"
     },
